crates/aven-check/tests/fixtures/check/invalid/unbound-method-parameterized-owner.av
x = Array.sortBy
Array.sortBy
